stylesheets/main.css
/* ... */
input.send_message:hover {
}
fieldset {
    border: 0 none;
    float: left;
    padding: 0;
    position: relative;
    width: 100%;
}
fieldset h1 {
    font-size: 24px;
}
.contact-label-box {
	font-weight:300;
    font-size: 24px;
    line-height: 31px;
    padding: 30px 20px;
    text-align: center;
}
.contact-label-box > span {
    display: block;
    margin-right: 10px;
}
.contact-label-box > span > img {
    height: 60px;
    width: 60px;
}
.contact-label-box a:hover {
    text-decoration: none;
}
.contact .alert{
	box-shadow: none;
	border:none;
	border-radius: 0;
	text-shadow:none;
	font-size: 12px;
	line-height: 19px;font-weight:300;
	margin-bottom:10px;
	padding:10px;
	text-align: left;
}
.btn-wrap{
	margin-top: 30px;
}
.space-left{
	margin-left: 1%;
}

.alert{
	margin-top: 0px;
	border-radius: 0px;
	padding: 5px;
	-webkit-transition: all .8s linear;
		-moz-transition: all .8s linear;
	-ms-transition: all .8s linear;
		-o-transition: all .8s linear;
		transition: all .8s linear;
}
.alert > p{
	text-shadow:none;
	font-size: 14px;
	line-height: 21px; font-weight:300;
}

.address-wrap h3{
    font-size: 14px;
    font-weight: 200;
    letter-spacing: 4px;
    line-height: 21px;
    text-transform: uppercase;
}

.email-wrap{
    font-size: 24px;
    font-weight: 600;
    line-height: 31px;
    margin-top: 10px;
    margin-bottom: 20px;
    padding: 0;
}

section.map-wrap {
	display: none;
}

/* Mobile fixes for mastfoot */
@media screen and (max-width: 767px) {
    .mastfoot.space-top,
    .super-space {
        margin-top: 0 !important;
    }
    
    .mastfoot article {
        padding: 30px 15px !important;
        min-height: auto !important;
        height: auto !important;
    }
    
    .mastfoot article .valign {
        position: static !important;
        top: auto !important;
        -webkit-transform: none !important;
        -ms-transform: none !important;
        transform: none !important;
    }
}

